--- a/templates/items/weapon.html
+++ b/templates/items/weapon.html
@@ -151,8 +151,8 @@
 
 
 
-                         {{!-- Weapon Availability --}}
-                        <div class="form-group">
+                {{!-- Weapon Availability --}}
+                <div class="form-group" data-tooltip="{{localize 'd100A.availabilitytooltip' }}">
                         <label>{{ localize "d100A.availability" }}</label>
                         <select name="system.availability">
                         {{#select itemData.availability}}
@@ -162,14 +162,6 @@
                         {{/select}}
                         </select>
                         </div>
-
-
-
-
-
-
-
-
 
 
 
