--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -177,7 +177,8 @@
 
     <a class="item" data-tab="inventory">Inventory</a>
     <a class="item" data-tab="modifiers">{{localize "SFRPG.Modifiers"}}</a>
-    <a class="item" data-tab="spellbook">{{ localize "SFRPG.SpellBook.Spellbook" }}</a>
+    <!-- <a class="item" data-tab="spellbook">{{ localize "SFRPG.SpellBook.Spellbook" }}</a> -->
+    <a class="item" data-tab="psionics">{{ localize "Psionics" }}</a>
 	<a class="item" data-tab="history">History</a>
    
 
@@ -441,9 +442,9 @@
             {{> "systems/Alternityd100/templates/actors/parts/actor-modifiers.html" sections=modifiers}}
         </div>
        
-        {{!-- Spellbook Tab --}}
-        <div class="tab spellbook flexcol" data-group="primary" data-tab="spellbook">
-          <!--  {{> "systems/Alternityd100/templates/actors/parts/actor-spellbook.html"}}-->
+        {{!-- Psionics Tab --}}
+        <div class="tab psionics flexcol" data-group="primary" data-tab="psionics">
+            {{> "systems/Alternityd100/templates/actors/parts/actor-psionic.html"}}
         </div>
         
         {{!-- History Tab --}}
